# otus_cpp_08_async_bayan

./: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  README.md  README_8md.html  annotated.html  async_8cpp.html  async_8cpp_8o_8d.html  async_8cpp__incl.map  async_8cpp__incl.md5  async_8h.html  async_8h__dep__incl.map  async_8h__dep__incl.md5  async_8h__incl.map  async_8h__incl.md5  async_8h_source.html  bulk__machine_8cpp.html  bulk__machine_8cpp_8o_8d.html  bulk__machine_8cpp__incl.map  bulk__machine_8cpp__incl.md5  bulk__machine_8h.html  bulk__machine_8h__dep__incl.map  bulk__machine_8h__dep__incl.md5  bulk__machine_8h__incl.map  bulk__machine_8h__incl.md5  bulk__machine_8h_source.html  classes.html  classimpl_1_1handle__storage-members.html  classimpl_1_1handle__storage.html  classimpl_1_1t__bulk__machine-members.html  classimpl_1_1t__bulk__machine.html  classimpl_1_1t__console__conv-members.html  classimpl_1_1t__console__conv.html  classimpl_1_1t__context-members.html  classimpl_1_1t__context.html  classimpl_1_1t__file__conv-members.html  classimpl_1_1t__file__conv.html  console__conv_8cpp.html  console__conv_8cpp_8o_8d.html  console__conv_8cpp__incl.map  (+82 more)
.github/workflows/: actions_config.yml
include/: async.h
lib/: CMakeLists.txt  async.cpp  bulk_machine.cpp  bulk_machine.h  console_conv.cpp  console_conv.h  context.cpp  context.h  file_conv.cpp  file_conv.h  global_place.cpp  storage.cpp  storage.h
search/: all_1.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_2.js  files_3.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
test_util/: CMakeLists.txt  main.cpp
